<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:minWidth = "300dip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <Button
        android:id="@+id/button_toggle_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_toggle_enabled"
        style="@style/AppTheme.FormButton" />
    
    <Button
        android:id="@+id/button_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_edit_macro"
        style="@style/AppTheme.FormButton" />
    
    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_delete_macro"
        style="@style/AppTheme.FormButton" />

    
</LinearLayout>