<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_macro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme.FragmentContainer"
    tools:context=".MainActivity$MacroFragment" >

    <!-- Macro List -->
    <LinearLayout
        android:id="@+id/container_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="7dip"
        android:orientation="vertical"
        >
	    <ListView
	        android:id="@+id/list_macro"
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1"
	        style="@style/AppTheme.List" />
	    <Button
	        android:id="@+id/button_new_macro"
	        android:layout_width="match_parent"
	        android:layout_height="35dip"
	        android:text="@string/title_make_macro"
	        style="@style/AppTheme.FormButton"
	        />
    </LinearLayout>

    <!-- New macro form -->
    <LinearLayout
        android:id="@+id/container_make_macro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/AppTheme.FormContainer" >

	    <ScrollView 
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1"
	        style="@style/AppTheme.FormContainer">
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="vertical"
	            >
		        	    
		        <!-- Name
			    <LinearLayout 
			    	android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
			    	android:orientation="horizontal"
			    	android:gravity="top">
			    	<TextView
			        	android:id="@+id/text_macro_name"
			        	android:layout_width="0dip"
			        	android:layout_weight="3"
			        	android:layout_height="wrap_content"
			        	android:text="@string/title_macro_name"
			        	style="@style/AppTheme.FormText" />
				    <EditText 
				        android:id="@+id/edit_macro_name"
				    	android:layout_width="0dip" 
			    		android:layout_height="wrap_content"
			    		android:layout_weight="7"
			    		style="@style/AppTheme.FormEditText" />
				</LinearLayout>
		         -->
			    
		        <!-- Conditions -->
			    <LinearLayout 
			        android:id="@+id/container_condition"
			    	android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
			    	android:orientation="vertical"
			    	style="@style/AppTheme.FormContainer" >
			    	
			  	    <TextView
				       	android:layout_width="match_parent"
				       	android:layout_height="wrap_content"
				       	android:layout_margin="4dip"
				       	android:padding="4dip"
				       	android:text="@string/title_macro_conditions"
				       	style="@style/AppTheme.FormTitle" />
			        
			        <!-- Major code -->
				    <LinearLayout 
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	android:orientation="horizontal"
				    	android:gravity="top">
				    	<TextView
				        	android:id="@+id/text_macro_major"
				        	android:layout_width="0dip"
				        	android:layout_weight="3"
				        	android:layout_height="wrap_content"
				        	android:text="@string/title_macro_major"
				        	style="@style/AppTheme.FormText.Title" />
					    <EditText 
					        android:id="@+id/edit_macro_major"
					    	android:layout_width="0dip" 
				    		android:layout_height="wrap_content"
				    		android:layout_weight="7"
				    		android:inputType="number"
				    		style="@style/AppTheme.FormEditText" />
					</LinearLayout>
					
			        <!-- Minor code -->
				    <LinearLayout 
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	android:orientation="horizontal"
				    	android:gravity="top">
				    	<TextView
				        	android:id="@+id/text_macro_minor"
				        	android:layout_width="0dip"
				        	android:layout_weight="3"
				        	android:layout_height="wrap_content"
				        	android:text="@string/title_macro_minor"
				        	style="@style/AppTheme.FormText.Title" />
					    <EditText 
					        android:id="@+id/edit_macro_minor"
					    	android:layout_width="0dip" 
				    		android:layout_height="wrap_content"
				    		android:layout_weight="7"
				    		android:inputType="number"
				    		style="@style/AppTheme.FormEditText" />
					</LinearLayout>
					
			        <!-- UUID -->
				    <LinearLayout 
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	android:orientation="horizontal"
				    	android:gravity="top">
				    	<TextView
				        	android:id="@+id/text_macro_uuid"
				        	android:layout_width="0dip"
				        	android:layout_weight="3"
				        	android:layout_height="wrap_content"
				        	android:text="@string/title_macro_uuid"
				        	style="@style/AppTheme.FormText.Title" />
					    <EditText 
					        android:id="@+id/edit_macro_uuid"
					    	android:layout_width="0dip" 
				    		android:layout_height="wrap_content"
				    		android:layout_weight="7"
				    		style="@style/AppTheme.FormEditText" />
					</LinearLayout>
					
			        <!-- Distance -->
				    <LinearLayout 
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	android:orientation="horizontal"
				    	android:gravity="top">
				    	<TextView
				        	android:id="@+id/text_macro_distance"
				        	android:layout_width="0dip"
				        	android:layout_weight="3"
				        	android:layout_height="wrap_content"
				        	android:text="@string/title_macro_distance"
				        	style="@style/AppTheme.FormText.Title" />
			            <Spinner 
			                android:id="@+id/spinner_macro_distance" 
			                android:layout_width="wrap_content" 
			                android:layout_height="wrap_content"
			                style="@style/AppTheme.FormSpinner" />
					</LinearLayout>
		        </LinearLayout>
		        
		        
		        <!-- Works -->
			    <LinearLayout 
			        android:id="@+id/container_works"
			    	android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
			    	android:layout_marginTop="10dip"
			    	android:orientation="vertical"
			    	style="@style/AppTheme.FormContainer" >
				    
			  	    <TextView
				      	android:id="@+id/text_title_works"
				       	android:layout_width="match_parent"
				       	android:layout_height="wrap_content"
				       	android:layout_margin="4dip"
				       	android:padding="4dip"
				       	android:text="@string/title_macro_works"
				       	style="@style/AppTheme.FormTitle" />
			        
			        <!-- Do what -->
				    <LinearLayout 
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	android:orientation="horizontal"
				    	android:gravity="top">
				    	<TextView
				        	android:layout_width="0dip"
				        	android:layout_weight="3"
				        	android:layout_height="wrap_content"
				        	android:text="@string/title_macro_work_type"
				        	style="@style/AppTheme.FormText.Title" />
			            <Spinner 
			                android:id="@+id/spinner_macro_work_type" 
			                android:layout_width="wrap_content" 
			                android:layout_height="wrap_content"
			                style="@style/AppTheme.FormSpinner" />
					</LinearLayout>
					
			        <!-- Macro work details -->
				    <LinearLayout
				        android:id="@+id/container_work_details"
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	android:orientation="horizontal"
				    	android:gravity="top">
				    	<TextView
				        	android:id="@+id/text_macro_target"
				        	android:layout_width="0dip"
				        	android:layout_weight="3"
				        	android:layout_height="wrap_content"
				        	android:text="@string/title_macro_target"
				        	style="@style/AppTheme.FormText.Title" />
					    <EditText 
					        android:id="@+id/edit_macro_target"
					    	android:layout_width="0dip" 
				    		android:layout_height="wrap_content"
				    		android:layout_weight="7"
				    		style="@style/AppTheme.FormEditText" />
			        </LinearLayout>
		        </LinearLayout>
		
			    
		        <!-- Message -->
			    <LinearLayout 
			        android:id="@+id/container_message"
			    	android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
			    	android:layout_marginTop="10dip"
			    	android:orientation="vertical"
			    	style="@style/AppTheme.FormContainer" >
				    
			  	    <TextView
				       	android:layout_width="match_parent"
				       	android:layout_height="wrap_content"
				       	android:layout_margin="4dip"
				       	android:padding="4dip"
				       	android:text="@string/title_macro_message"
				       	style="@style/AppTheme.FormTitle" />
			        
			        <!-- Do what -->
				    <LinearLayout 
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	android:orientation="horizontal"
				    	android:gravity="top">
				    	<TextView
				        	android:id="@+id/text_macro_message"
				        	android:layout_width="0dip"
				        	android:layout_weight="3"
				        	android:layout_height="wrap_content"
				        	android:text="@string/title_macro_message"
				        	style="@style/AppTheme.FormText.Title" />
					    <EditText 
					        android:id="@+id/edit_macro_message"
					    	android:layout_width="0dip" 
				    		android:layout_height="wrap_content"
				    		android:layout_weight="7"
				    		style="@style/AppTheme.FormEditText" />
					</LinearLayout>
		        </LinearLayout>
		        
		        <!-- Macro name -->
			    <LinearLayout 
			        android:id="@+id/container_macro_title"
			    	android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
			    	android:layout_marginTop="10dip"
			    	android:orientation="vertical"
			    	style="@style/AppTheme.FormContainer" >
				    
			  	    <TextView
				       	android:layout_width="match_parent"
				       	android:layout_height="wrap_content"
				       	android:layout_margin="4dip"
				       	android:padding="4dip"
				       	android:text="@string/title_macro_options"
				       	style="@style/AppTheme.FormTitle" />
			        
			        <!-- Macro name -->
				    <LinearLayout 
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	android:orientation="horizontal"
				    	android:gravity="top">
				    	<TextView
				        	android:id="@+id/text_macro_title"
				        	android:layout_width="0dip"
				        	android:layout_weight="3"
				        	android:layout_height="wrap_content"
				        	android:text="@string/title_macro_title"
				        	style="@style/AppTheme.FormText.Title" />
					    <EditText 
					        android:id="@+id/edit_macro_title"
					    	android:layout_width="0dip" 
				    		android:layout_height="wrap_content"
				    		android:layout_weight="7"
				    		style="@style/AppTheme.FormEditText" />
					</LinearLayout>
			        <!-- Enabled or not -->
				    <LinearLayout 
				    	android:layout_width="match_parent"
				    	android:layout_height="wrap_content"
				    	android:orientation="horizontal"
				    	android:gravity="top">
				    	<TextView
				        	android:id="@+id/text_macro_enable"
				        	android:layout_width="0dip"
				        	android:layout_weight="3"
				        	android:layout_height="wrap_content"
				        	android:text="@string/title_macro_enable"
				        	style="@style/AppTheme.FormText.Title" />
					    <CheckBox 
					        android:id="@+id/check_macro_enabled"
					    	android:layout_width="0dip" 
				    		android:layout_height="wrap_content"
				    		android:layout_weight="7"
				    		style="@style/AppTheme.FormEditText" />
					</LinearLayout>
		        </LinearLayout>
	        
		    </LinearLayout>
		    
	    </ScrollView>
	    
		<LinearLayout 
		 	android:layout_width="match_parent"
		   	android:layout_height="wrap_content"
		   	android:orientation="horizontal"
		   	android:layout_marginBottom="5dip"
		   	android:gravity="top">
		    <Button
		        android:id="@+id/button_back_to_list"
		        android:layout_width="0dip"
		        android:layout_height="30dip"
		        android:layout_weight="1"
		        android:text="@string/title_back_to_list"
		        style="@style/AppTheme.FormButton"
		        />
		    <Button
		        android:id="@+id/button_make_macro"
		        android:layout_width="0dip"
		        android:layout_height="30dip"
		        android:layout_weight="1"
		        android:text="@string/title_macro_make"
		        style="@style/AppTheme.FormButton"
		        />
		</LinearLayout>
    
    </LinearLayout>
        

    
</FrameLayout>
