<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:minWidth = "300dip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <!-- Beacon menu mode -->
	<LinearLayout
	    android:id="@+id/layout_beacon_menu"
	    android:minWidth = "300dip"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:focusable="true"
	    android:focusableInTouchMode="true" >
    
	    <Button
	        android:id="@+id/button_make_macro_with_this"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_make_macro_with_this"
	        style="@style/AppTheme.FormButton" />
	    
	    <Button
	        android:id="@+id/button_remember_beacon"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_remember_beacon"
	        style="@style/AppTheme.FormButton" />
	    
	    <Button
	        android:id="@+id/button_delete_beacon"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_delete_beacon"
	        style="@style/AppTheme.FormButton" />
	    
	    <!-- 
	    
	    <Button
	        android:id="@+id/button_make_macro_with_uuid"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_make_macro_with_uuid"
	        style="@style/AppTheme.FormButton" />
	    
	    <Button
	        android:id="@+id/button_make_macro_with_uuid"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_make_macro_with_uuid"
	        style="@style/AppTheme.FormButton" />
	    
	    <Button
	        android:id="@+id/button_make_macro_with_major"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_make_macro_with_major"
	        style="@style/AppTheme.FormButton" />
	    
	    <Button
	        android:id="@+id/button_toggle_enable"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_toggle_enabled"
	        style="@style/AppTheme.FormButton" />
	         -->
	         
    </LinearLayout>
	    
	<!-- Remeber beacon mode -->
	<LinearLayout
	    android:id="@+id/layout_remember"
	    android:minWidth = "300dip"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:focusable="true"
	    android:focusableInTouchMode="true" >
	    
	    <TextView 
	        android:id="@+id/item_info1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="5dip"
	        android:paddingLeft="10dip"
	        android:paddingRight="5dip"
	        android:paddingBottom="0dip"
	        style="@style/AppTheme.TwoLineListUpperLineText" />
	    
	    <TextView 
	        android:id="@+id/item_info2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="5dip"
	        android:paddingLeft="10dip"
	        android:paddingRight="5dip"
	        android:paddingBottom="0dip"
	        style="@style/AppTheme.TwoLineListUpperLineText" />
	        
	    <TextView 
	        android:id="@+id/item_info3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="5dip"
	        android:paddingLeft="10dip"
	        android:paddingRight="5dip"
	        android:paddingBottom="0dip"
	        style="@style/AppTheme.TwoLineListUpperLineText" />
    
	    <!-- Name input form -->
	    <LinearLayout 
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:paddingTop="10dip"
	    	android:orientation="horizontal"
	    	android:gravity="top">
	    	<TextView
	        	android:id="@+id/text_beacon_name"
	        	android:layout_width="0dip"
	        	android:layout_weight="3"
	        	android:layout_height="wrap_content"
	        	android:text="@string/title_beacon_name"
	        	style="@style/AppTheme.FormText.Title" />
		    <EditText 
		        android:id="@+id/edit_beacon_name"
		    	android:layout_width="0dip" 
	    		android:layout_height="wrap_content"
	    		android:layout_weight="7"
	    		style="@style/AppTheme.FormEditText" />
		</LinearLayout>
	    
	    <Button
	        android:id="@+id/button_remember_ok"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_remember_beacon"
	        style="@style/AppTheme.FormButton" />
	    
	    <!-- 
	    
	    <Button
	        android:id="@+id/button_make_macro_with_uuid"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_make_macro_with_uuid"
	        style="@style/AppTheme.FormButton" />
	    
	    <Button
	        android:id="@+id/button_make_macro_with_uuid"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_make_macro_with_uuid"
	        style="@style/AppTheme.FormButton" />
	    
	    <Button
	        android:id="@+id/button_make_macro_with_major"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_make_macro_with_major"
	        style="@style/AppTheme.FormButton" />
	    
	    <Button
	        android:id="@+id/button_toggle_enable"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_toggle_enabled"
	        style="@style/AppTheme.FormButton" />
	         -->
	         
    </LinearLayout>
    
</LinearLayout>